--- a/templates/result.html
+++ b/templates/result.html
@@ -7,5 +7,10 @@
 	<h2>Your Predicted Character is: {{results}}</h2></body>
 	<br>
 	<br>
+	<h2>Download a file</h2>
+
+			<p>
+				<a href="{{ url_for('.download_file') }}">Download</a>
+			</p>	
 	
 </html>
